tests/paczka1/fuzzy1/75806782.err
Error in line 7: mQmL3TaPv S900 41,1
Error in line 14: GoLwU8qTS S523 99,2
Error in line 22: S470 S523 128,0
Error in line 25: mQmL3TaPv A728 74,5
Error in line 34: UYxB S523 31,4
